# dipper

./: .gitignore  README.md  dipper.cabal
doc/: example1.md  example2.md  example3.md  writables.md
jar/: pom.xml
jar/src/main/java/org/dipper/: DipperConf.java  DipperOutputFormat.java  DipperResolver.java  TagKeyComparator.java  TagKeyWritable.java  ValueWritable.java
src/: Dipper.hs
src/Dipper/: AST.hs  Annotation.hs  Binary.hs  Coproduct.hs  Core.hs  Examples.hs  Internal.hs  Interpreter.hs  Jar.hs  Pipeline.hs  Product.hs  Sink.hs  Types.hs
src/Dipper/Core/: Examples.hs  Types.hs
src/Dipper/Hadoop/: Encoding.hs  Environment.hs
tst/: Test.hs
