name:          dipper
version:       0.1.0.0
synopsis:      Write Hadoop Streaming jobs using Haskell
description:   Write Hadoop Streaming jobs using Haskell
homepage:      http://github.com/jystic/dipper
license:       BSD3
license-file:  LICENSE
author:        Jacob Stanley
maintainer:    jacob@stanley.io
copyright:     (c) 2015 Jacob Stanley
category:      Data
build-type:    Simple
cabal-version: >= 1.10

library
  hs-source-dirs: src
  default-language: Haskell2010

  ghc-options:
    -funbox-strict-fields
    -Wall

  exposed-modules:
    Dipper

  build-depends:
      base   >= 4.8 && < 4.9
    , binary >= 0.7.4
