name:          dipper
version:       0.1.0.0
synopsis:      Write Hadoop Streaming jobs using Haskell
description:   Write Hadoop Streaming jobs using Haskell
homepage:      http://github.com/jystic/dipper
license:       BSD3
license-file:  LICENSE
author:        Jacob Stanley
maintainer:    jacob@stanley.io
copyright:     (c) 2015 Jacob Stanley
category:      Data
build-type:    Simple
cabal-version: >= 1.10

library
  hs-source-dirs: src
  default-language: Haskell2010

  ghc-options:
    -funbox-strict-fields
    -Wall

  exposed-modules:
    Dipper
    Dipper.AST
    Dipper.Examples
    Dipper.Interpreter
    Dipper.Types

  other-modules:
    Dipper.Internal
    Dipper.Jar

  build-depends:
      base              >= 4.8 && < 4.9
    , binary            >= 0.7
    , bytestring        >= 0.10
    , conduit           >= 1.2
    , containers        >= 0.5
    , directory         >= 1.2
    , file-embed        >= 0.0
    , filepath          >= 1.4
    , free              >= 4.12
    , lens              >= 4.9
    , mtl               >= 2.2
    , pipes             >= 4.1
    , pipes-group       >= 1.0
    , pipes-text        >= 0.0
    , process           >= 1.2
    , process-streaming >= 0.7
    , reinterpret-cast  >= 0.1
    , strict-base-types >= 0.3
    , text              >= 1.2
