name:          dipper
version:       0.1.0.0
synopsis:      Write Hadoop Streaming jobs using Haskell
description:   Write Hadoop Streaming jobs using Haskell
homepage:      http://github.com/jystic/dipper
license:       BSD3
license-file:  LICENSE
author:        Jacob Stanley
maintainer:    jacob@stanley.io
copyright:     (c) 2015 Jacob Stanley
category:      Data
build-type:    Simple
cabal-version: >= 1.10

library
  hs-source-dirs: src
  default-language: Haskell2010

  ghc-options:
    -funbox-strict-fields
    -Wall

  exposed-modules:
    Dipper
    Dipper.AST
    Dipper.Binary
    Dipper.Examples
    Dipper.Interpreter
    Dipper.Types

  other-modules:
    Dipper.Internal
    Dipper.Jar

  build-depends:
      base              >= 4.8 && < 4.9
    , async             >= 2.0
    , binary            >= 0.7
    , bytestring        >= 0.10
    , conduit           >= 1.2
    , conduit-extra     >= 1.1
    , containers        >= 0.5
    , directory         >= 1.2
    , file-embed        >= 0.0
    , filepath          >= 1.4
    , mtl               >= 2.2
    , reinterpret-cast  >= 0.1
    , strict-base-types >= 0.3
    , text              >= 1.2

test-suite test-dipper
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: tst
  default-language: Haskell2010

  build-depends:
      base              >= 4.8 && < 4.9
    , binary            >= 0.7
    , bytestring        >= 0.10
    , containers        >= 0.5
    , dipper
    , strict-base-types >= 0.3
    , QuickCheck        >= 2.8.1
